RHCLOUD-11604 store runs in database
